--- a/src/DumpMEF/DumpMEF.csproj
+++ b/src/DumpMEF/DumpMEF.csproj
@@ -49,6 +49,7 @@
     <Compile Include="DumpMEF.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
