Remove manual binding redirects.

--- a/src/DumpMEF/DumpMEF.csproj
+++ b/src/DumpMEF/DumpMEF.csproj
@@ -1,7 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net471</TargetFramework>
-    <OutputType>winexe</OutputType>
+    <OutputType>Exe</OutputType>
+    <ApplicationIcon />
+    <StartupObject />
   </PropertyGroup>
 
   <ItemGroup>
